hopefully fixed links being weirdly sized on mobile

--- a/styling.css
+++ b/styling.css
@@ -1,20 +1,22 @@
 :root {
   --article-bg-color: rgb(255, 255, 255);
   --article-text-color: rgb(0, 0, 0);
-	--article-link-color: rgb(0, 102, 204);
-	--visited-link-color: rgb(85, 26, 139);
+	--article-link-color-base: rgb(0, 102, 204);
+	--visited-link-color-base: rgb(85, 26, 139);
 	--redlink-color: rgb(140, 0, 0);
   --header-bg-color: rgba(0, 0, 0, 0.15);
   --subcontents-bg-color: rgb(0, 0, 0, 0.15);
   --box-bg-color: rgb(235, 235, 235);
 	--link-image-max-height: 2rem;
+	--article-link-color: var(--article-link-color-base);
+	--visited-link-color: var(--visited-link-color-base);
 }
 
 .darkmode {
   --article-bg-color: rgb(10, 10, 10);
   --article-text-color: rgb(200, 200, 200);
-	--article-link-color: #2bb9ff;
-	--visited-link-color: rgb(140, 125, 255);
+	--article-link-color-base: #2bb9ff;
+	--visited-link-color-base: rgb(140, 125, 255);
 	--redlink-color: rgb(255, 62, 62);
   --header-bg-color: rgba(10, 10, 10, 0.15);
   --subcontents-bg-color: rgb(10, 10, 10, 0.15);
@@ -213,7 +215,7 @@ details > summary {
 	vertical-align: middle;
 }
 
-.statvalues > .linkdiv {
+.statvalues > .linkdiv, .statvalues > .link {
 	vertical-align: middle;
 }
 
@@ -338,6 +340,11 @@ details > summary {
 
 .linknote {
 	font-size:0.9rem;
+}
+
+.linkandnote {
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .inlineblock {
